[gd_scene load_steps=2 format=2]

[ext_resource path="res://Embed Objects/Fields.gd" type="Script" id=1]

[node name="Field" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 250 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 1010.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_right = 480.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 484.0
margin_right = 526.0
margin_bottom = 14.0
text = "Fields:"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 530.0
margin_right = 1010.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="FieldName" type="LineEdit" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 1010.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
placeholder_text = "Field Name:"
caret_blink = true
caret_blink_speed = 0.3

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 1010.0
margin_bottom = 66.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_right = 74.0
margin_bottom = 14.0
text = "Field Value:"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 78.0
margin_right = 1010.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="FieldValue" type="TextEdit" parent="PanelContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 1010.0
margin_bottom = 524.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
caret_blink = true
caret_blink_speed = 0.3

[node name="InlineButton" type="CheckBox" parent="PanelContainer/VBoxContainer"]
margin_top = 528.0
margin_right = 1010.0
margin_bottom = 552.0
text = "Inline"

[node name="RemoveFieldButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_left = 446.0
margin_top = 556.0
margin_right = 563.0
margin_bottom = 586.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 4
text = "- Remove Field -"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/RemoveFieldButton" to="." method="_on_RemoveFieldButton_pressed"]
